chore: bump version to 1.0.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zincapp/archon-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Command-line interface for ARCHON infrastructure management",
   "type": "module",
   "bin": {
@@ -40,8 +40,7 @@
   },
   "homepage": "https://github.com/vidaldiego/archon-cli#readme",
   "publishConfig": {
-    "access": "public",
-    "provenance": true
+    "access": "public"
   },
   "dependencies": {
     "chalk": "^5.3.0",
